tests/fixtures/corpus/bugs_round7.txt
; ============================================================
; Round 7 — empty Select Case (every Case commented out),
; declarations before the first Case, leading-dot members as
; call arguments, comments that end in "_", the Line keyword as
; an L-value and in a member chain, keyword-named line labels,
; conditional compilation that splits a regular block, and a
; single-line If whose body is itself a single-line If.
; ============================================================

; ------------------------------------------------------------
; A Select Case whose every Case has been commented out is still
; a legal, compilable shell. Zero case clauses must parse, with
; the comment/blank lines kept inside the body.
; ------------------------------------------------------------

==================
Round7-A1 Select Case with no Case clause (only comments)
==================

Sub S()
    Select Case x
        'Case "a"
        'commentary
    End Select
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (select_statement
        test: (identifier)
        (comment)
        (comment)))))

==================
Round7-A2 Select Case with a blank body
==================

Sub S()
    Select Case x
    End Select
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (select_statement
        test: (identifier)))))

==================
Round7-A3 Select Case with a real Case still parses (control)
==================

Sub S()
    Select Case x
        Case 1
            y = 1
    End Select
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (select_statement
        test: (identifier)
        (case_clause
          (case_values
            (literal
              (integer_literal)))
          (block
            (assignment_statement
              target: (identifier)
              value: (literal
                (integer_literal)))))))))

; ------------------------------------------------------------
; VB6 allows declarations (and other statements) between the
; Select Case selector and the first Case label; they belong to
; the enclosing procedure scope. A leading Dim must not break
; the Select.
; ------------------------------------------------------------

==================
Round7-B1 Dim before the first Case
==================

Sub S()
    Select Case lDay
        Dim iIndex As Integer
        Case 1
            iIndex = 1
    End Select
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (select_statement
        test: (identifier)
        (variable_declaration
          (variable_list
            (variable_declarator
              name: (identifier)
              (as_clause
                type: (builtin_type)))))
        (case_clause
          (case_values
            (literal
              (integer_literal)))
          (block
            (assignment_statement
              target: (identifier)
              value: (literal
                (integer_literal)))))))))

==================
Round7-B2 assignment before the first Case
==================

Sub S()
    Select Case lDay
        x = 1
        Case 1
            y = 1
    End Select
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (select_statement
        test: (identifier)
        (assignment_statement
          target: (identifier)
          value: (literal
            (integer_literal)))
        (case_clause
          (case_values
            (literal
              (integer_literal)))
          (block
            (assignment_statement
              target: (identifier)
              value: (literal
                (integer_literal)))))))))

; ------------------------------------------------------------
; Inside a With block, ".Member" refers to a member of the With
; object. Such a leading-dot member is a valid call argument; it
; was previously rejected in parenthesis-less argument lists.
; ------------------------------------------------------------

==================
Round7-C1 leading-dot members as bare call arguments
==================

Sub S()
    With o
        Foo a, .X, .Y, b
    End With
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (with_statement
        object: (identifier)
        (block
          (call_statement
            (implicit_call_stmt
              (identifier)
              (argument_list_no_parens
                (identifier)
                (with_member_expression
                  member: (identifier))
                (with_member_expression
                  member: (identifier))
                (identifier)))))))))

==================
Round7-C2 leading-dot members as method-call arguments
==================

Sub S()
    With o
        obj.Move 0, 0, .Width, .Height
    End With
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (with_statement
        object: (identifier)
        (block
          (call_statement
            (implicit_call_stmt
              (member_expression
                object: (identifier)
                member: (identifier))
              (argument_list_no_parens
                (literal
                  (integer_literal))
                (literal
                  (integer_literal))
                (with_member_expression
                  member: (identifier))
                (with_member_expression
                  member: (identifier))))))))))

; ------------------------------------------------------------
; A "'" comment runs to end-of-line; a trailing "_" inside it is
; literal comment text, NOT a line continuation (comments cannot
; be continued). The comment ends at the newline and the next
; line is its own statement — no splicing into the next line.
; ------------------------------------------------------------

==================
Round7-D1 standalone comment ending in underscore does not continue
==================

Sub S()
    ' note _
    y = 2
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (comment)
      (assignment_statement
        target: (identifier)
        value: (literal
          (integer_literal))))))

==================
Round7-D2 trailing comment ending in underscore does not continue
==================

Sub S()
    x = 1 ' note _
    y = 2
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (assignment_statement
        target: (identifier)
        value: (literal
          (integer_literal))
        (comment))
      (assignment_statement
        target: (identifier)
        value: (literal
          (integer_literal))))))

; ------------------------------------------------------------
; "Line" is the Line graphics / Line Input keyword, but is also
; an ordinary variable/member name. "Line = 1" is an assignment
; to it, not the start of the Line keyword statement.
; ------------------------------------------------------------

==================
Round7-E1 Line as an assignment L-value
==================

Sub S()
    Line = 1
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (assignment_statement
        target: (identifier)
        value: (literal
          (integer_literal))))))

==================
Round7-E2 Line graphics statement still parses (control)
==================

Sub S()
    Line (0, 0)-(10, 10)
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (graphics_method_statement
        from: (graphics_coord
          x: (literal
            (integer_literal))
          y: (literal
            (integer_literal)))
        to: (graphics_coord
          x: (literal
            (integer_literal))
          y: (literal
            (integer_literal)))))))

; ------------------------------------------------------------
; "Line" used as an ordinary variable in a member-access chain
; (a method call on a variable named "line"). The keyword must
; be demoted to an identifier when it is the object before ".".
; ------------------------------------------------------------

==================
Round7-F1 Line as an identifier in a member-access chain
==================

Sub S()
    line.Parts.Add pts
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (call_statement
        (implicit_call_stmt
          (member_expression
            object: (member_expression
              object: (identifier)
              member: (identifier))
            member: (identifier))
          (argument_list_no_parens
            (identifier)))))))

==================
Round7-F2 Line Input still parses (control)
==================

Sub S()
    Line Input #1, sBuf
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (line_input_statement
        (literal
          (file_number))
        (identifier)))))

; ------------------------------------------------------------
; A line label may be a word that is also a keyword — commonly
; an error-handler label "Error:". "Error" followed by ":" is a
; label, not the Error statement (which requires an operand).
; ------------------------------------------------------------

==================
Round7-G1 keyword Error used as a line label
==================

Sub S()
    Exit Sub
Error:
    MsgBox Err.Description
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (exit_statement)
      (label
        (identifier))
      (call_statement
        (implicit_call_stmt
          (identifier)
          (argument_list_no_parens
            (member_expression
              object: (identifier)
              member: (identifier))))))))

==================
Round7-G2 Error statement still parses (control)
==================

Sub S()
    Error 5
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (error_statement
        (literal
          (integer_literal))))))

; ------------------------------------------------------------
; A single-line If body may itself be a complete single-line If
; ("If a Then If b Then …"), including across a "_" continuation
; that splits the outer If from its inner If.
; ------------------------------------------------------------

==================
Round7-H1 nested single-line If on one line
==================

Sub S()
    If a And b Then If c Then Exit Function
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (if_statement
        condition: (binary_expression
          (identifier)
          (identifier))
        (if_statement
          condition: (identifier)
          (implicit_call_stmt
            (identifier)
            (argument_list_no_parens
              (identifier))))))))

==================
Round7-H2 nested single-line If across a line continuation
==================

Sub S()
    If a And b Then _
        If c Then Exit Function
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (if_statement
        condition: (binary_expression
          (identifier)
          (identifier))
        (line_continuation)
        (if_statement
          condition: (identifier)
          (implicit_call_stmt
            (identifier)
            (argument_list_no_parens
              (identifier))))))))

; ------------------------------------------------------------
; Conditional-compilation directives inside a procedure are line
; directives, independent of statement-block nesting. A regular
; If/Else/End If may be opened inside a #If arm while the #End If
; lands in the middle of that block. Modeling the directives as
; standalone statements lets them cross the regular blocks.
; ------------------------------------------------------------

==================
Round7-I1 #End If splitting a regular If/Else block
==================

Sub S()
#If COND = 1 Then
  If a Then
    x = 1
  Else
#End If 'note
    y = 2
  End If
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (preproc_directive
        condition: (preproc_binary_expression
          (identifier)
          (integer_literal)))
      (if_statement
        condition: (identifier)
        (block
          (assignment_statement
            target: (identifier)
            value: (literal
              (integer_literal))))
        (else_clause
          (block
            (preproc_directive
              (comment))
            (assignment_statement
              target: (identifier)
              value: (literal
                (integer_literal)))))))))

==================
Round7-I2 plain conditional compilation in a procedure
==================

Sub S()
#If COND = 1 Then
  x = 1
#End If 'note
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (preproc_directive
        condition: (preproc_binary_expression
          (identifier)
          (integer_literal)))
      (assignment_statement
        target: (identifier)
        value: (literal
          (integer_literal)))
      (preproc_directive
        (comment)))))

==================
Round7-I3 all four #If/#ElseIf/#Else/#End If directive forms
==================

Sub S()
#If A Then
  x = 1
#ElseIf B Then
  x = 2
#Else
  x = 3
#End If
End Sub

---

(source_file
  (sub_declaration
    name: (identifier)
    (parameter_list)
    (block
      (preproc_directive
        condition: (identifier))
      (assignment_statement
        target: (identifier)
        value: (literal
          (integer_literal)))
      (preproc_directive
        condition: (identifier))
      (assignment_statement
        target: (identifier)
        value: (literal
          (integer_literal)))
      (preproc_directive)
      (assignment_statement
        target: (identifier)
        value: (literal
          (integer_literal)))
      (preproc_directive))))
